First attempt at fixing scroll issue on mobile device.

--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ body {
   max-width: 90vw;
   max-height: 90vh;
   overflow-y: auto;
+  overflow-x: auto;
 }
 
 .lightbox-item {
